# spotify-backend

./: .gitignore  README.md  pyproject.toml  requests.graphiql
spot_backend/: asgi.py  settings.py  urls.py  wsgi.py
spotify/: __init__.py  admin.py  models.py  schema.py
